# sshmon

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: main.rs
src/config/: mod.rs
src/logger/: mod.rs
src/notifier/: discord.rs  mod.rs  ntfy.rs  pushover.rs  stdout.rs
