[package]
name = "ssh-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
envconfig = "0.11.0"
gethostname = "0.5.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
log = "0.4.22"
notify = "7.0.0"
pushover = "0.4.0"
regex = "1.11.1"
serde_json = "1.0.132"
